# DLCreator

./: .clang-tidy  .gitignore  CMakeLists.txt  DLCreator.desktop  README.md  TODO.md  build.sh  buildRelease.sh  runTests.sh
.github/workflows/: linux_release.yml  release.yml  tests.yml  version-check.yml  windows_release.yml
docs/: AddLayer.md
resources/: cell.json  cellLayer.json  resources.qrc
src/: document.h  file.h  history.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapSave.h  resources.h  settings.h  tool.h
src/file/: file.h  tabbutton.h
src/mapSaver/: mapSaver.cpp  mapSaver.h  mapSaverJsons.h
src/widgets/: cellCollection.h  collapsiblesection.h  contentWidget.h  contentview.h  contentwidget.h  graphicsscene.h  tabbutton.h  toolWidget.h  toolwidget.h
src/widgets/cell/: cell.h  cellLayer.h  celllayer.h
src/widgets/components/: nameFrame.h
src/widgets/contentWidget/: cellCollection.h  contentWidget.h
src/widgets/contentWidget/cell/: cell.h  cellLayer.h
src/widgets/historyWidget/: cellActionWidget.h  historyWidget.h
src/widgets/tabWidget/: stackedContentWidget.h  tabScrollArea.h  tabWidget.h
src/widgets/tabWidget/stackedContentWidget/: stackedContentWidget.h
src/widgets/tabWidget/stackedContentWidget/contentWidget/: cellCollection.h  contentWidget.h  expandButton.h  gridManager.h
src/widgets/tabWidget/stackedContentWidget/contentWidget/cell/: cell(header only).h  cell.cpp  cell.h  cellAction.h  cellLayer.h
src/widgets/tabWidget/stackedContentWidget/contentWidget/cell2/: cell.cpp  cell.h  cellAction.h
src/widgets/tabWidget/stackedContentWidget/contentWidget/cellItem/: cellAction.h  cellItem.cpp  cellItem.h  cellLayer.h
src/widgets/tabWidget/stackedHistoryWidget/: stackedHistoryWidget.h
src/widgets/tabWidget/stackedHistoryWidget/historyWidget/: cellActionWidget.h  historyWidget.h
src/widgets/tabWidget/tabScrollArea/: tabScrollArea.h
src/widgets/toolWidget/: toolButton.h  toolWidget.h
tests/: CMakeLists.txt  TestMapSaver.cpp
tests/testSamples/MapSaver/: 10x10.dlmap  12x11.dlmap  12x8.dlmap  2x6.dlmap
